--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim/bundle/lightline.vim"]
 	path = vim/bundle/lightline.vim
 	url = git://github.com/itchyny/lightline.vim
+[submodule "vim/bundle/vim-lion"]
+	path = vim/bundle/vim-lion
+	url = git://github.com/tommcdo/vim-lion.git
