Add hostname to tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -75,7 +75,7 @@ setw -g window-status-activity-fg colour3
 setw -g window-status-activity-bg colour16
 
 set -g status-left ''
-set -g status-right '#[fg=colour8]%a %e #[fg=colour7]%H:%M'
+set -g status-right '#[fg=colour1]<#h>  #[fg=colour8]%a %e #[fg=colour7]%H:%M'
 
 set -g window-status-format " #I‣ #W#F "
 set -g window-status-current-format " #I‣ #W#F "
