Add vim-textobj-rubyblock plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/pack/plugins/start/vim-autotag"]
 	path = vim/pack/plugins/start/vim-autotag
 	url = git://github.com/craigemery/vim-autotag.git
+[submodule "vim/pack/plugins/start/vim-textobj-rubyblock"]
+	path = vim/pack/plugins/start/vim-textobj-rubyblock
+	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
