--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "vim/pack/plugins/start/vim-textobj-rubyblock"]
 	path = vim/pack/plugins/start/vim-textobj-rubyblock
 	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
+[submodule "vim/pack/plugins/start/vim-textobj-user"]
+	path = vim/pack/plugins/start/vim-textobj-user
+	url = https://github.com/kana/vim-textobj-user
