Add vim-tmux-navigator plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vim/pack/plugins/start/vim-scala"]
 	path = vim/pack/plugins/start/vim-scala
 	url = https://github.com/derekwyatt/vim-scala
+[submodule "vim/pack/plugins/start/vim-tmux-navigator"]
+	path = vim/pack/plugins/start/vim-tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator
