--- a/tmux.conf
+++ b/tmux.conf
@@ -36,10 +36,6 @@ bind-key - split-window -v -c "#{pane_current_path}"
 # New hotkey for renaming
 bind-key / command-prompt 'rename-window %%'
 
-# Easy moving defaults
-bind-key , previous-window
-bind-key . next-window
-
 # Pane zooming
 bind-key z resize-pane -Z
 
@@ -50,11 +46,16 @@ bind -n C-k clear-history
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+bind Left  if-shell "$is_vim" "send-keys Escape \\ Left"  "select-pane -L"
+bind Right if-shell "$is_vim" "send-keys Escape \\ Right" "select-pane -R"
+bind Up    if-shell "$is_vim" "send-keys Escape \\ Up"    "select-pane -U"
+bind Down  if-shell "$is_vim" "send-keys Escape \\ Down"  "select-pane -D"
+bind \     if-shell "$is_vim" "send-keys Escape \\ \\"    "select-pane -l"
+
+# Use Shift-Left/Right for window switching
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 # Window notifications
 setw -g monitor-activity on
