Use consistent keywords within tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,14 @@
 # ` and Ctrl-space as prefix
-unbind-key C-@
+unbind C-@
 set -g prefix '`'
 set -g prefix2 "C-@"
 
 # Ensure True Color gets picked up
 set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # Use `` to send `
-bind-key '`' send-prefix
+bind '`' send-prefix
 
 # Allow reloading of config
 unbind r
@@ -26,18 +26,18 @@ unbind c
 bind c new-window -c "#{pane_current_path}"
 
 # Fix User Namespace issue in Yosemite
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+set -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 # New hotkeys for splitting (and ensure they have PWD)
 unbind %
-bind-key | split-window -h -c "#{pane_current_path}"
-bind-key - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # New hotkey for renaming
-bind-key / command-prompt 'rename-window %%'
+bind / command-prompt 'rename-window %%'
 
 # Pane zooming
-bind-key z resize-pane -Z
+bind z resize-pane -Z
 
 # Clearing history
 bind -n C-k clear-history
@@ -65,7 +65,7 @@ set -g renumber-windows on
 
 # Mousey!
 # c.f. https://github.com/tmux/tmux/issues/145, bloody Tmux 2.1
-set-option -g -q mouse on
+set -g -q mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
