More tmux options

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,15 @@
+# Address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
+
+# Increase scrollback buffer size
+set -g history-limit 50000
+
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
+
+# Disregard any non-active smaller clients
+setw -g aggressive-resize on
+
 # ` and Ctrl-space as prefix
 unbind C-@
 set -g prefix '`'
