Restore prefix-,/. for window switching in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,9 +65,11 @@ bind Up    if-shell "$is_vim" "send-keys Escape \\ Up"    "select-pane -U"
 bind Down  if-shell "$is_vim" "send-keys Escape \\ Down"  "select-pane -D"
 bind \     if-shell "$is_vim" "send-keys Escape \\ \\"    "select-pane -l"
 
-# Use Shift-Left/Right for window switching
+# Use Shift-Left/Right for window switching, as well as prefix-,/.
 bind -n S-Left  previous-window
 bind -n S-Right next-window
+bind-key , previous-window
+bind-key . next-window
 
 # Window notifications
 setw -g monitor-activity on
